artifacts/control-tower-ui/ct-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
 labels:
   name: ct-ui
 name: ct-ui
spec:
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    name: ct-ui
