artifacts/control-tower-ui/ct-ui-ingress-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ct-ui-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ct-ui-prod-static-ip
spec:
  backend:
    serviceName: ct-ui
    servicePort: 80
